--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Node.js Homework Application",
   "main": "app.js",
   "scripts": {
-    "build": "babel ./app.js",
-    "start": "npm run build && nodemon npm run build",
+    "babel-node": "babel-node --presets=env",
+	"start": "nodemon --exec npm run babel-node -- app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
