--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "babel-node": "babel-node --presets=env",
-	"start": "nodemon --exec npm run babel-node -- app.js",
+    "start": "nodemon --exec npm run babel-node -- app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "csvtojson": "^2.0.8",
     "nodemon": "^1.18.7"
   }
 }
