--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "babel-register": "^6.26.0",
     "csvtojson": "^2.0.8",
     "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "commander": "^2.19.0"
   }
 }
