--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "babel-register": "^6.26.0",
     "csvtojson": "^2.0.8",
     "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "body": "^5.1.0",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
+    "parser": "^0.1.4"
   }
 }
