--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "pg": "^7.8.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^5.4.0",
+    "sqlite3": "^4.0.6"
   }
 }
