--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
     "swagger-editor": "^3.6.25",
-    "swagger-ui-express": "^4.0.2",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.0.2"
   }
 }
